[package]
name = "alternator-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
aws-sdk-dynamodb = "1.97.0"
itertools = "0.14.0"
reqwest = { version = "0.11", features = ["json"] }


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(ccm_tests)',
] }
