[package]
name = "alternator-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-sdk-dynamodb = { version = "1.100.0", features = ["test-util"] }
anyhow = "1.0.102"
itertools = "0.14.0"
reqwest = { version = "0.11", features = ["json"] }
aws-smithy-async = "1.2.11"
aws-smithy-runtime = "1.10.0"
aws-smithy-runtime-api = "1.11.6"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.22.0", features = ["v4"] }
hyper = { version = "1.8", features = ["client", "server", "http1"] }
http = "1.0"
http-body-util = "0.1"
hyper-util = "0.1"
futures = "0.3.31"
test-context = "0.5.5"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(ccm_tests)',
] }